--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^6.0.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.0.0",
         "@symfony/webpack-encore": "^1.7.0",
@@ -19,7 +18,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "4.6",
+        "bootstrap": "^4.6.1",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
         "select2": "^4.1.0-rc.0"
